PDF reader and My Investments Added

--- a/src/constants/translations/ar.json
+++ b/src/constants/translations/ar.json
@@ -61,6 +61,17 @@
     "details":"تفاصيل",
     "aboutcompany":"عن الشركة",
     "investnow":"استثمر الآن",
+    "SAR":"ريال",
+    "raisedamount":"رفع المبلغ",
+    "valuation":"تقييم",
+    "maxtarget":"الهدف الأقصى",
+    "shareprice":"شارك السعر",
+    "subscriptions":"الاشتراكات",
+    "average":"معدل",
+    "highest":"الأعلى",
+    "lowest":"أدنى",
+    "from":"من",
+    "to":"إلى",
     "guests": {
       "one": "1 guest",
       "other": "{{count}} guests",
