--- a/src/constants/translations/en.json
+++ b/src/constants/translations/en.json
@@ -61,6 +61,17 @@
     "details":"Details",
     "aboutcompany":"About the Company",
     "investnow":"Invest Now",
+    "SAR":"SAR",
+    "raisedamount":"Raised Amount",
+    "valuation":"Valuation",
+    "maxtarget":"Max Target",
+    "shareprice":"Share Price",
+    "subscriptions":"Subscriptions",
+    "average":"Average",
+    "highest":"Highest",
+    "lowest":"Lowest",
+    "from":"From",
+    "to":"To",
     "guests": {
       "one": "1 guest",
       "other": "{{count}} guests",
