--- a/src/constants/translations/en.json
+++ b/src/constants/translations/en.json
@@ -78,6 +78,14 @@
     "otherdocuments":"Other Documents",
     "prospectus":"Prospectus",
     "viewdocument":"View Document",
+    "remainingamount":"Remaining Amount",
+    "sharesallowed":"Shares Allowed",
+    "minimum":"Minimum",
+    "maximum":"Maximum",
+    "currentinvestors":"Current Investors",
+    "withdraw":"Withdraw", 
+     "closed":"Closed",
+     "totalbalance":"Total Balance",
     "guests": {
       "one": "1 guest",
       "other": "{{count}} guests",
