--- a/src/constants/translations/ar.json
+++ b/src/constants/translations/ar.json
@@ -15,7 +15,9 @@
     "followed": "Followed",
     "search": "Search",
     "night": "night",
-    "day": "day",
+    "day": "يوم",
+    "month": "شهر",
+    "year": "عام",
     "booknow": "Book Now",
     "selectDate": "Select date",
     "checkInOut": "Check-In & Check-Out",
@@ -25,7 +27,7 @@
     "message": "Enter your message",
     "album": "Album",
     "or": "or",
-    "name": "Name",
+    "name": "الاسم",
     "namePlaceholder": "Enter your full name",
     "email": "بريد الالكتروني",
     "emailPlaceholder": "أدخل عنوان بريدك الالكتروني",
@@ -48,6 +50,7 @@
     "donthaveaccount":"ليس لديك حساب؟",
     "confirmpassword":"تأكيد كلمة المرور",
     "agreemekyalterms":"أنا أوافق على ميكال",
+    "agreeelmterms":"أفوض بموجب هذا لشركة Mekyal Financial Technologies للتحقق من بياناتي الشخصية مع Elm",
     "alreadyuser":"مستخدم مسجل بالفعل؟",
     "goBack": "Go back",
     "inStock": "In stock",
@@ -86,6 +89,21 @@
      "closed":"مغلق",
      "withdraw":"انسحب", 
      "totalbalance":"الرصيد الكلي",
+     "id": "رقم بطاقة الهوية",
+     "dob":"تاريخ الميلاد",
+     "dobg":"تاريخ الميلاد (الميلادي)",
+     "hijri":"هجري",
+     "beginidverification":"ابدأ عملية التحقق من الهوية",
+     "verifyyouridentity":"تحقق من هويتك للمشاركة في برنامج مكيال للتمويل الجماعي",
+     "personalinfo":"البيانات الشخصية",
+     "personalinforeq":"تحقق من هويتك للمشاركة في برنامج مكيال للتمويل الجماعي",
+    "typecarefully":".نرجو الكتابة بانتباه وملء النموذج ببياناتك الشخصية، لا يمكنك تعديل هذه التفاصيل بعد إرسال النموذج",
+    "idmustbe":"* يجب أن يكون رقم الهوية بحد أقصى 10 ارقام.", 
+    "saudinationals":"* يسمح للمواطنين السعوديين بالتسجيل",
+    "idexpirydate":"تاريخ انتهاء الهوية(هجري)",
+    "gender":"جنس",
+    "male":"الذكر",
+    "female":"أنثى",
     "guests": {
       "one": "1 guest",
       "other": "{{count}} guests",
