--- a/src/constants/translations/en.json
+++ b/src/constants/translations/en.json
@@ -15,7 +15,9 @@
     "followed": "Followed",
     "search": "Search",
     "night": "night",
-    "day": "day",
+    "day": "Day",
+    "month": "Month",
+    "year": "year",
     "booknow": "Book Now",
     "selectDate": "Select date",
     "checkInOut": "Check-In & Check-Out",
@@ -50,6 +52,7 @@
     "donthaveaccount":"Don't have an account?",
     "goBack": "Go back",
     "agreemekyalterms":"I Agree To Mekyal's",
+    "agreeelmterms":"I hereby authorize Mekyal Financial Technologies to verify my personal data with Elm",
     "inStock": "In stock",
     "outStock": "Out of stock",
     "addToCart": "Add to cart",
@@ -86,7 +89,22 @@
     "withdraw":"Withdraw", 
      "closed":"Closed",
      "totalbalance":"Total Balance",
-    "guests": {
+     "id":"ID",
+     "dob":"Date of Birth",
+     "dobg":"Date of Birth (G)",
+     "hijri":"Hijri",
+     "beginidverification":"Begin your ID-Verification",
+     "verifyyouridentity":"Verify your identity to participate in Mekyal Crowd Funding",
+     "personalinfo":"Personal Info",
+     "personalinforeq":"Your simple perosnal information required for identification",
+     "typecarefully":"Please type carefully and fill out the form with your personal details. Your can’t edit these details once you submitted the form.",
+    "idmustbe":"* Identity Number must be a numeric with maximum number of 10.",
+    "saudinationals":"* Saudi Nationals are allowed to Register",
+    "idexpirydate":"ID Expiry Date (Hijri)",
+    "gender":"Gender",
+    "male":"Male",
+    "female":"Female",
+     "guests": {
       "one": "1 guest",
       "other": "{{count}} guests",
       "zero": "0 Guests"
