arabic added to missing screens

--- a/src/constants/translations/ar.json
+++ b/src/constants/translations/ar.json
@@ -104,6 +104,16 @@
     "gender":"جنس",
     "male":"الذكر",
     "female":"أنثى",
+    "cob":"بلد الميلاد",
+    "nationaladdress": "العنوان الوطني",
+    "country":"بلد",
+    "city":"مدينة",
+    "unitnum":"رقم الوحدة",
+    "zipcode":"رمز بريدي",
+    "streetname":"اسم الشارع",
+    "additionalnum":"رقم إضافي",
+    "next":"التالي",
+    "back":"الى الخلف",
     "guests": {
       "one": "1 guest",
       "other": "{{count}} guests",
