--- a/src/constants/translations/en.json
+++ b/src/constants/translations/en.json
@@ -104,6 +104,16 @@
     "gender":"Gender",
     "male":"Male",
     "female":"Female",
+    "cob":"Country of Birth",
+    "nationaladdress": "National Address",
+    "country":"Country",
+    "city":"City",
+    "unitnum":"Unit Number",
+    "zipcode": "Zip Code",
+    "streetname":"Street Name",
+    "additionalnum":"Additional Number",
+    "next":"Next",
+    "back":"Back",
      "guests": {
       "one": "1 guest",
       "other": "{{count}} guests",
